problems were fixed. code was cleaned up. mixins were upgraded.

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             </p>
           </div>
           <!------------------------------ header__button ------------------------------->
-          <a class="header__button">
-            <span class="header__button-text">Get Started</span>
+          <a class="header__button button">
+            <span class="header__button-text button-text">Get Started</span>
           </a>
         </div>
         <!---------------------------------------------------- header-arrow-right -->
@@ -160,10 +160,10 @@
       <!---------------------------------------------------- screenshots -->
       <section class="screenshots">
         <div class="screenshots__textbox">
-          <span class="screenshots__textbox-title"
+          <span class="screenshots__textbox-title textbox-title"
             >Waxom is Realization of your Ideas.</span
           >
-          <p class="screenshots__textbox-txt">
+          <p class="screenshots__textbox-txt textbox-txt">
             Investigationes demonstraverunt lectores legere me lius quod ii
             legunt saepius. Claritas est etiam processus dynamicus, qui sequitur
             mutationem consuetudium.
@@ -182,18 +182,18 @@
             Don't Forget to Rate the Template. Thanks so much!
           </p>
         </div>
-        <button class="ad__button">
-          <span class="ad__button-text">purchase now</span>
+        <button class="ad__button button">
+          <span class="ad__button-text button-text">purchase now</span>
         </button>
       </aside>
       <!---------------------------------------------------- our-latsest-projects -->
       <section class="our-latsest-projects">
         <div class="our-latsest-projects__container">
           <div class="our-latsest-projects__textbox">
-            <span class="our-latsest-projects__textbox-title"
+            <span class="our-latsest-projects__textbox-title textbox-title"
               >Our Latest Projects.</span
             >
-            <p class="our-latsest-projects__textbox-txt">
+            <p class="our-latsest-projects__textbox-txt textbox-txt">
               Investigationes demonstraverunt lectores legere me lius quod ii
               legunt saepius. Claritas est etiam processus dynamicus, qui
               sequitur mutationem consuetudium.
@@ -218,7 +218,9 @@
           </div>
           <div class="our-latsest-projects__picturebox">
             <div class="our-latsest-projects__picturebox-item">
-              <div class="our-latsest-projects__picturebox-item-pic"></div>
+              <div class="our-latsest-projects__picturebox-item-pic">
+                <img src="/img/content/photo.jpg" alt="project-photo-1" />
+              </div>
               <div class="our-latsest-projects__picturebox-item-title">
                 Claritas Etiam Processus
               </div>
@@ -227,7 +229,9 @@
               </div>
             </div>
             <div class="our-latsest-projects__picturebox-item">
-              <div class="our-latsest-projects__picturebox-item-pic"></div>
+              <div class="our-latsest-projects__picturebox-item-pic">
+                <img src="img/content/photo2.jpg" alt="project-photo-2" />
+              </div>
               <div class="our-latsest-projects__picturebox-item-title">
                 Quam Nutamus Farum
               </div>
@@ -236,7 +240,9 @@
               </div>
             </div>
             <div class="our-latsest-projects__picturebox-item">
-              <div class="our-latsest-projects__picturebox-item-pic"></div>
+              <div class="our-latsest-projects__picturebox-item-pic">
+                <img src="img/content/photo3.jpg" alt="project-photo-3" />
+              </div>
               <div class="our-latsest-projects__picturebox-item-title">
                 Usus Legentis Videntur
               </div>
@@ -245,7 +251,9 @@
               </div>
             </div>
             <div class="our-latsest-projects__picturebox-item">
-              <div class="our-latsest-projects__picturebox-item-pic"></div>
+              <div class="our-latsest-projects__picturebox-item-pic">
+                <img src="img/content/photo4.jpg" alt="project-photo-4" />
+              </div>
               <div class="our-latsest-projects__picturebox-item-title">
                 Claritas Etiam Processus
               </div>
@@ -254,7 +262,9 @@
               </div>
             </div>
             <div class="our-latsest-projects__picturebox-item">
-              <div class="our-latsest-projects__picturebox-item-pic"></div>
+              <div class="our-latsest-projects__picturebox-item-pic">
+                <img src="img/content/photo5.jpg" alt="project-photo-5" />
+              </div>
               <div class="our-latsest-projects__picturebox-item-title">
                 Quam Nutamus Farum
               </div>
@@ -263,7 +273,9 @@
               </div>
             </div>
             <div class="our-latsest-projects__picturebox-item">
-              <div class="our-latsest-projects__picturebox-item-pic"></div>
+              <div class="our-latsest-projects__picturebox-item-pic">
+                <img src="img/content/photo6.jpg" alt="project-photo-6" />
+              </div>
               <div class="our-latsest-projects__picturebox-item-title">
                 Usus Legentis Videntur
               </div>
