--- a/index.html
+++ b/index.html
@@ -123,37 +123,174 @@
       <!---------------------------------------------------- activities -->
       <section class="activities">
         <div class="container">
-          <div class="activities__item">
-            <img src="/img/icons/service-icon-1.svg" alt="icon1" />
-            <span>Web & App Design</span>
-            <p>
-              Nam liber tempor cum soluta nobis eleifend option congue nihil
-              imperdiet doming id quod mazim.
-            </p>
-          </div>
-          <div class="activities__item activities__item2">
-            <img src="/img/icons/service-icon-2.svg" alt="icon2" />
-            <span>Development</span>
-            <p>
-              Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh
-              euismod tincidunt ut laoreet.
-            </p>
-          </div>
-          <div class="activities__item">
-            <img src="/img/icons/service-icon-3.svg" alt="icon3" />
-            <span>Customization</span>
-            <p>
-              Nam liber tempor cum soluta nobis eleifend option congue nihil
-              imperdiet doming id quod mazim.
-            </p>
-          </div>
-          <div class="activities__item">
-            <img src="/img/icons/service-icon-4.svg" alt="icon4" />
-            <span>Marketing</span>
-            <p>
-              Nam liber tempor cum soluta nobis eleifend option congue nihil
-              imperdiet doming id quod mazim.
-            </p>
+          <div class="activities__wrapper">
+            <div class="activities__item">
+              <svg
+                class="activities__item-img"
+                xmlns="http://www.w3.org/2000/svg"
+                width="65.348"
+                height="65.348"
+              >
+                <defs>
+                  <filter id="2mzx1k3pha">
+                    <feFlood
+                      flood-color="#555"
+                      flood-opacity="1"
+                      result="floodOut"
+                    />
+                    <feComposite
+                      operator="atop"
+                      in="floodOut"
+                      in2="SourceGraphic"
+                      result="compOut"
+                    />
+                    <feBlend in="compOut" in2="SourceGraphic" />
+                  </filter>
+                </defs>
+                <g filter="url(#2mzx1k3pha)">
+                  <path
+                    fill-rule="evenodd"
+                    d="M47.668 19.717 33.402 33.985.534 48.463l14.477-32.872L29.279 1.327a1.59 1.59 0 1 1 2.248 2.249L17.683 17.422 9.107 36.888l2.999 2.999 19.467-8.573L45.42 17.47a1.586 1.586 0 0 1 2.248 0c.621.62.621 1.63 0 2.247zm-17.923 8.749a1.596 1.596 0 0 1-2.25 0 1.593 1.593 0 0 1 0-2.25l13.332-13.331a1.584 1.584 0 0 1 2.25 0c.623.62.623 1.625 0 2.249L29.745 28.466zm-3.48-3.481a1.592 1.592 0 0 1-2.25-2.25L37.348 9.403a1.592 1.592 0 0 1 2.25 2.25L26.265 24.985zm-3.481-3.483a1.583 1.583 0 0 1-1.125.466 1.592 1.592 0 0 1-1.125-2.715L33.867 5.922a1.586 1.586 0 0 1 2.25 0 1.59 1.59 0 0 1 0 2.25l-13.333 13.33z"
+                  />
+                </g>
+              </svg>
+              <!-- <img
+              class="activities__item-img"
+              src="/img/icons/service-icon-1.svg"
+              alt="icon1"
+            /> -->
+              <span class="activities__item-title">Web & App Design</span>
+              <p class="activities__item-text">
+                Nam liber tempor cum soluta nobis eleifend option congue nihil
+                imperdiet doming id quod mazim.
+              </p>
+            </div>
+            <div class="activities__item activities__item--active">
+              <svg
+                class="activities__item-img"
+                xmlns="http://www.w3.org/2000/svg"
+                width="58.658"
+                height="53.329"
+              >
+                <defs>
+                  <filter id="ymn36t0a6a">
+                    <feFlood
+                      flood-color="#C7B299"
+                      flood-opacity="1"
+                      result="floodOut"
+                    />
+                    <feComposite
+                      operator="atop"
+                      in="floodOut"
+                      in2="SourceGraphic"
+                      result="compOut"
+                    />
+                    <feBlend in="compOut" in2="SourceGraphic" />
+                  </filter>
+                </defs>
+                <g filter="url(#ymn36t0a6a)">
+                  <path
+                    fill-rule="evenodd"
+                    d="m.414 19.697 3.985-2.149 17.452 9.41 17.451-9.41 3.985 2.149-21.436 11.556L.414 19.697zm0-8.031L21.851.106l21.436 11.56-21.436 11.561L.414 11.666zm21.437 23.319 17.451-9.412 3.985 2.148-21.436 11.562L.414 27.721l3.985-2.148 17.452 9.412z"
+                  />
+                </g>
+              </svg>
+
+              <!-- <img
+              class="activities__item-img"
+              src="/img/icons/service-icon-2.svg"
+              alt="icon2"
+            /> -->
+              <span class="activities__item-title">Development</span>
+              <p class="activities__item-text">
+                Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy
+                nibh euismod tincidunt ut laoreet.
+              </p>
+            </div>
+            <div class="activities__item">
+              <svg
+                class="activities__item-img"
+                xmlns="http://www.w3.org/2000/svg"
+                width="58.658"
+                height="58.658"
+              >
+                <defs>
+                  <filter id="psmb1nnyca">
+                    <feFlood
+                      flood-color="#555"
+                      flood-opacity="1"
+                      result="floodOut"
+                    />
+                    <feComposite
+                      operator="atop"
+                      in="floodOut"
+                      in2="SourceGraphic"
+                      result="compOut"
+                    />
+                    <feBlend in="compOut" in2="SourceGraphic" />
+                  </filter>
+                </defs>
+                <g filter="url(#psmb1nnyca)">
+                  <path
+                    fill-rule="evenodd"
+                    d="M43.927 21.85c0-1.62-1.166-3.349-2.605-3.857-1.44-.51-2.835-1.758-3.241-2.742-.406-.982-.3-2.855.355-4.234.656-1.379.259-3.426-.886-4.574-1.146-1.146-3.193-1.541-4.573-.885-1.38.656-3.25.764-4.231.357-.981-.405-2.229-1.803-2.741-3.242S23.764.067 22.144.067c-1.621 0-3.35 1.167-3.862 2.606-.512 1.439-1.76 2.836-2.741 3.242-.981.407-2.851.299-4.231-.357-1.378-.656-3.427-.261-4.573.885-1.145 1.148-1.542 3.195-.886 4.574.656 1.38.76 3.249.353 4.233-.408.982-1.799 2.233-3.238 2.743C1.526 18.501.36 20.23.36 21.85c0 1.621 1.166 3.349 2.606 3.861 1.439.512 2.832 1.763 3.24 2.743.408.98.301 2.85-.355 4.229-.656 1.379-.259 3.427.886 4.572 1.146 1.147 3.193 1.544 4.573.887 1.38-.656 3.25-.761 4.231-.353.982.407 2.229 1.805 2.741 3.243.512 1.436 2.241 2.601 3.862 2.601 1.62 0 3.349-1.165 3.861-2.601.512-1.438 1.758-2.836 2.739-3.246.981-.408 2.853-.3 4.233.356 1.379.657 3.427.26 4.573-.887 1.145-1.145 1.542-3.193.886-4.572-.655-1.379-.763-3.25-.357-4.23.406-.981 1.803-2.23 3.243-2.742 1.439-.512 2.605-2.24 2.605-3.861zm-21.783 7.992c-4.42 0-7.994-3.572-7.994-7.983a7.988 7.988 0 0 1 7.994-7.994c4.41 0 7.984 3.575 7.984 7.994a7.982 7.982 0 0 1-7.984 7.983z"
+                  />
+                </g>
+              </svg>
+
+              <!-- <img
+              class="activities__item-img"
+              src="/img/icons/service-icon-3.svg"
+              alt="icon3"
+            /> -->
+              <span class="activities__item-title">Customization</span>
+              <p>
+                Nam liber tempor cum soluta nobis eleifend option congue nihil
+                imperdiet doming id quod mazim.
+              </p class="activities__item-text">
+            </div>
+            <div class="activities__item">
+              <svg
+                class="activities__item-img"
+                xmlns="http://www.w3.org/2000/svg"
+                width="69.317"
+                height="48"
+              >
+                <defs>
+                  <filter id="b8hvrzmzia">
+                    <feFlood
+                      flood-color="#555"
+                      flood-opacity="1"
+                      result="floodOut"
+                    />
+                    <feComposite
+                      operator="atop"
+                      in="floodOut"
+                      in2="SourceGraphic"
+                      result="compOut"
+                    />
+                    <feBlend in="compOut" in2="SourceGraphic" />
+                  </filter>
+                </defs>
+                <g filter="url(#b8hvrzmzia)">
+                  <path
+                    fill-rule="evenodd"
+                    d="m51.411 14.341-9.49 19.422c-.595 1.221-2.192 2.221-3.543 2.221H3.08c-1.35 0-1.968-1.002-1.369-2.221l9.492-19.422c.593-1.223 2.189-2.226 3.539-2.226H50.04c1.354 0 1.969 1.003 1.371 2.226zM9 13.245.738 30.147V7.983c0-1.364 1.105-2.482 2.458-2.481h10.816V4.058c0-.995.382-1.923 1.082-2.628A3.64 3.64 0 0 1 17.701.335h6.29c2.029 0 3.684 1.667 3.684 3.723v1.443h10.816c1.351 0 2.458 1.118 2.458 2.482v1.654H14.742c-2.267 0-4.74 1.55-5.742 3.608zm7.47-7.743h8.747V4.058c0-.688-.55-1.243-1.228-1.243h-6.291a1.2 1.2 0 0 0-.866.368 1.25 1.25 0 0 0-.362.875v1.444z"
+                  />
+                </g>
+              </svg>
+
+              <!-- <img
+              class="activities__item-img"
+              src="/img/icons/service-icon-4.svg"
+              alt="icon4"
+            /> -->
+              <span class="activities__item-title">Marketing</span>
+              <p class="activities__item-text">
+                Nam liber tempor cum soluta nobis eleifend option congue nihil
+                imperdiet doming id quod mazim.
+              </p>
+            </div>
           </div>
         </div>
       </section>
