--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
           </div>
           <div class="our-latsest-projects__picturebox">
             <!-- ------------------------------------------------1 item -->
+
             <div class="our-latsest-projects__picturebox-item">
               <div class="our-latsest-projects__picturebox-item-pic">
                 <img src="/img/content/photo.jpg" alt="project-photo-1" />
@@ -331,6 +332,7 @@
                   </button>
                 </div>
               </div>
+              <!-- <a class="our-latsest-projects__picturebox-item-link" href="#"></a> -->
               <div class="our-latsest-projects__picturebox-item-content">
                 <div class="our-latsest-projects__picturebox-item-title">
                   Claritas Etiam Processus
@@ -538,7 +540,47 @@
         </div>
       </section>
       <!---------------------------------------------------- waxom-video-presentation -->
-      <section class="waxom-video-presentation"></section>
+      <section class="presentation">
+        <div class="presentation__video">
+          <video
+            class="presentation__video-file"
+            src="video/trim_A50853CC_0A92_49AD_B7D4_587D23988B44.mov"
+            controls
+            muted
+            loop
+            preload="metadata"
+            poster="img/background-images/presentation-poster.jpg"
+          >
+            Sorry, your browser doesn't support embedded videos, but don't
+            worry, you can
+            <a href="videofile.ogg">download it</a>
+            and watch it with your favorite video player!
+          </video>
+          <div class="presentation__video-textbox-wrapper">
+            <button class="presentation__video-textbox-btn">
+              <svg
+                class="presentation__video-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="70"
+                height="70"
+              >
+                <path
+                  d="M31.253,18.653 L48.967,33.415 C49.437,33.807 49.709,34.386 49.709,34.997 C49.709,35.609 49.437,36.188 48.967,36.580 L31.253,51.343 C30.876,51.657 30.407,51.820 29.934,51.820 C29.638,51.820 29.339,51.755 29.060,51.626 C28.337,51.287 27.874,50.559 27.874,49.760 L27.874,20.235 C27.874,19.436 28.337,18.708 29.060,18.370 C29.783,18.030 30.640,18.141 31.253,18.653 ZM31.994,45.362 L44.431,34.997 L31.994,24.633 L31.994,45.362 ZM59.759,59.759 C53.033,66.484 44.026,69.998 34.937,69.998 C29.072,69.999 23.173,68.536 17.831,65.528 C16.839,64.970 16.488,63.713 17.046,62.722 C17.604,61.731 18.860,61.379 19.852,61.938 C31.870,68.703 47.082,66.611 56.845,56.845 C68.892,44.798 68.892,25.197 56.845,13.150 C44.798,1.101 25.196,1.102 13.150,13.150 C1.104,25.197 1.104,44.798 13.150,56.845 C13.955,57.650 13.955,58.954 13.150,59.759 C12.347,60.563 11.042,60.563 10.237,59.759 C-3.416,46.105 -3.416,23.890 10.237,10.236 C23.891,-3.416 46.104,-3.417 59.759,10.236 C73.412,23.890 73.412,46.105 59.759,59.759 Z"
+                />
+              </svg>
+            </button>
+            <div class="presentation__video-textbox-title">
+              Waxom Video Presentation
+            </div>
+            <div class="presentation__video-textbox-text">
+              Investigationes demonstraverunt lectores legere me lius quod ii
+              legunt saepius, qui sequitur mutationem consuetudium.
+            </div>
+            <div class="presentation__video-textbox-time">03:26</div>
+          </div>
+        </div>
+      </section>
       <!---------------------------------------------------- excellent-for-mobile -->
       <section class="excellent-for-mobile"></section>
       <!---------------------------------------------------- quantities -->
@@ -568,5 +610,10 @@
       </svg>
       <span class="logo-txt">Waxom</span>
     </a>
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script> -->
   </body>
 </html>
