section excellent for mobile is done + some additions

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
     <!---------------------------------------------------- main -->
     <main class="main">
       <!---------------------------------------------------- activities -->
-      <section class="activities">
-        <div class="container">
+      <section class="activities section">
+        <div class="activities__container container">
           <div class="activities__wrapper">
             <!-------------------------------------------------- 1-div  -->
             <div class="activities__item">
@@ -243,33 +243,37 @@
         </div>
       </section>
       <!---------------------------------------------------- screenshots -->
-      <section class="screenshots">
-        <div class="screenshots__textbox">
-          <span class="screenshots__textbox-title textbox-title"
-            >Waxom is Realization of your Ideas.</span
-          >
-          <p class="screenshots__textbox-txt textbox-txt">
-            Investigationes demonstraverunt lectores legere me lius quod ii
-            legunt saepius. Claritas est etiam processus dynamicus, qui sequitur
-            mutationem consuetudium.
-          </p>
+      <section class="screenshots section">
+        <div class="screenshots_container container">
+          <div class="screenshots__textbox textbox">
+            <span class="screenshots__textbox-title textbox-title"
+              >Waxom is Realization of your Ideas.</span
+            >
+            <p class="screenshots__textbox-txt textbox-txt">
+              Investigationes demonstraverunt lectores legere me lius quod ii
+              legunt saepius. Claritas est etiam processus dynamicus, qui
+              sequitur mutationem consuetudium.
+            </p>
+          </div>
+          <div class="screenshots__images"></div>
         </div>
-        <div class="screenshots__images"></div>
       </section>
       <!---------------------------------------------------- purchase-now -->
-      <aside class="ad">
-        <div class="ad__wrapper">
-          <p class="ad__title">
-            <span>Waxom</span>
-            Multipurpose WordPress Theme
-          </p>
-          <p class="ad__text">
-            Don't Forget to Rate the Template. Thanks so much!
-          </p>
+      <aside class="ad section">
+        <div class="ad__container container">
+          <div class="ad__wrapper">
+            <p class="ad__title">
+              <span>Waxom</span>
+              Multipurpose WordPress Theme
+            </p>
+            <p class="ad__text">
+              Don't Forget to Rate the Template. Thanks so much!
+            </p>
+          </div>
+          <button class="ad__button button">
+            <span class="ad__button-text button-text">purchase now</span>
+          </button>
         </div>
-        <button class="ad__button button">
-          <span class="ad__button-text button-text">purchase now</span>
-        </button>
       </aside>
       <!---------------------------------------------------- our-latsest-projects -->
       <section class="our-latsest-projects">
@@ -582,7 +586,37 @@
         </div>
       </section>
       <!---------------------------------------------------- excellent-for-mobile -->
-      <section class="excellent-for-mobile"></section>
+      <section class="excellent-for-mobile section">
+        <div class="excellent-for-mobile__container container">
+          <div class="excellent-for-mobile_textbox textbox">
+            <div class="excellent-for-mobile_textbox-title textbox-title">
+              Excellent for Mobile Devices.
+            </div>
+            <div class="excellent-for-mobile_textbox-text textbox-txt">
+              Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
+              suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+              Investigationes demonstraverunt lectores legere me lius quod ii
+              legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur
+              parum clari, fiant sollemnes in futurum.
+            </div>
+            <div class="excellent-for-mobile_textbox-list">
+              <div class="excellent-for-mobile_textbox-list-item textbox-txt">
+                Nam liber tempor cum soluta nobis eleifend option;
+              </div>
+              <div class="excellent-for-mobile_textbox-list-item textbox-txt">
+                Option congue nihil imperdiet doming id quod mazim placerat
+                facer;
+              </div>
+              <div class="excellent-for-mobile_textbox-list-item textbox-txt">
+                Eodem modo typi, qui nunc nobis videntur parum futurum;
+              </div>
+              <div class="excellent-for-mobile_textbox-list-item textbox-txt">
+                Investigationes demonstraverunt lectores
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!---------------------------------------------------- quantities -->
       <section class="quantities"></section>
       <!---------------------------------------------------- recent-posts -->
