--- a/index.html
+++ b/index.html
@@ -618,7 +618,117 @@
         </div>
       </section>
       <!---------------------------------------------------- quantities -->
-      <section class="quantities"></section>
+      <section class="quantities">
+        <div class="quantities__container container">
+          <div class="quantities__wrapper">
+            <!-------------------------------------------------- 1-div  -->
+            <div class="quantities__item">
+              <div class="quantities__item-img-wrapper">
+                <svg
+                  class="quantities__item-img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="44"
+                  height="44"
+                  viewBox="0 0 44 44"
+                >
+                  <g filter="url(#3x4ppe2gca)">
+                    <path
+                      fill-rule="evenodd"
+                      d="M19.937 30.25c5.688 0 10.313-5.629 10.313-12.547 0-6.919-4.625-12.547-10.313-12.547-2.813 0-5.439 1.346-7.394 3.788-1.883 2.354-2.919 5.464-2.918 8.759 0 6.919 4.625 12.547 10.312 12.547zm0-22.344c4.17 0 7.563 4.394 7.563 9.797 0 5.403-3.393 9.797-7.563 9.797-4.169 0-7.562-4.394-7.565-9.797 0-5.403 3.393-9.797 7.565-9.797zm8.661 20.969a1.374 1.374 0 1 0 0 2.75c4.701 0 8.527 3.825 8.527 8.528 0 .602-.494 1.097-1.101 1.097H3.848a1.099 1.099 0 0 1-1.098-1.097c0-4.703 3.824-8.528 8.524-8.528a1.374 1.374 0 1 0 0-2.75C5.057 28.875 0 33.934 0 40.153A3.853 3.853 0 0 0 3.848 44h32.176a3.854 3.854 0 0 0 3.851-3.847c0-6.219-5.06-11.278-11.277-11.278zM20.943 3.629c.984-.584 2.033-.878 3.119-.878 4.17 0 7.563 4.395 7.563 9.796 0 .969-.107 1.919-.32 2.828a1.374 1.374 0 0 0 1.339 1.689c.624 0 1.189-.428 1.338-1.06a15.3 15.3 0 0 0 .393-3.457C34.375 5.629 29.75 0 24.062 0a8.877 8.877 0 0 0-4.518 1.261 1.376 1.376 0 0 0 1.399 2.368zM33 23.375a1.374 1.374 0 1 0 0 2.75c4.701 0 8.25 3.918 8.25 8.618 0 .156-.03.31-.094.448a1.375 1.375 0 0 0 2.514 1.117c.218-.494.33-1.02.33-1.568 0-6.213-4.783-11.365-11-11.365z"
+                    />
+                  </g>
+                </svg>
+              </div>
+              <span class="quantities__item-title">3587</span>
+              <p class="quantities__item-text">Satisfied Clients</p>
+            </div>
+            <!-------------------------------------------------- 2-div -->
+            <div class="quantities__item">
+              <div class="quantities__item-img-wrapper">
+                <svg
+                  class="quantities__item-img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="60"
+                  height="44"
+                  viewBox="0 0 44 44"
+                >
+                  <g filter="url(#8lzl5b6n0a)">
+                    <path
+                      fill-rule="evenodd"
+                      d="M46.043 42.749c0 .691-.552 1.251-1.234 1.251H1.234C.553 44 0 43.44 0 42.749c0-.691.553-1.251 1.234-1.251h43.575c.682 0 1.234.56 1.234 1.251zM21.769 22.213a1.22 1.22 0 0 0 1.744-.061 1.263 1.263 0 0 0-.06-1.768c-2.116-2.002-1.663-6.07.155-8.37 2.467-3.12 3.01-8.683-.155-11.677a1.223 1.223 0 0 0-1.744.061 1.263 1.263 0 0 0 .06 1.768c1.901 1.798 1.858 5.823-.087 8.284-1.278 1.617-2.042 3.784-2.096 5.946-.06 2.363.716 4.429 2.183 5.817zM48 19.614v2.4c0 3.441-2.761 6.239-6.154 6.239h-2.755c-1.87 5.271-6.851 9.051-12.686 9.051h-6.766c-7.431 0-13.476-6.129-13.476-13.662v-12.41c0-.691.552-1.251 1.234-1.251h7.915c1.606-2.476 1.535-6.127-.249-7.815a1.263 1.263 0 0 1-.06-1.768 1.222 1.222 0 0 1 1.744-.061c3.164 2.994 2.621 8.557.155 11.677-1.819 2.3-2.272 6.369-.155 8.37.498.471.525 1.263.06 1.768a1.223 1.223 0 0 1-1.744.061c-1.468-1.388-2.243-3.454-2.184-5.817.034-1.347.343-2.696.881-3.913H8.63v11.159c0 6.154 4.939 11.16 11.009 11.16h6.766c6.07 0 11.008-5.006 11.008-11.16V12.483h-9.278c-.682 0-1.234-.56-1.234-1.251 0-.691.552-1.251 1.234-1.251h10.512c.682 0 1.234.56 1.234 1.251v2.143h1.965c3.393 0 6.154 2.799 6.154 6.239zm-2.468 0c0-2.06-1.654-3.737-3.686-3.737h-1.965v9.874h1.965c2.032 0 3.686-1.676 3.686-3.737v-2.4z"
+                    />
+                  </g>
+                </svg>
+              </div>
+              <span class="quantities__item-title">207</span>
+              <p class="quantities__item-text">Cups of coffee</p>
+            </div>
+            <!-------------------------------------------------- 3-div -->
+            <div class="quantities__item">
+              <div class="quantities__item-img-wrapper">
+                <svg
+                  class="quantities__item-img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="44"
+                  height="44"
+                  viewBox="0 0 44 44"
+                >
+                  <g filter="url(#kmzpjydzja)">
+                    <path
+                      fill-rule="evenodd"
+                      d="M28.873 23.374H15.126a1.375 1.375 0 0 0 0 2.75h13.747a1.376 1.376 0 0 0 0-2.75zm2.749-8.248H12.376a1.375 1.375 0 1 0 0 2.749h19.246a1.375 1.375 0 1 0 0-2.749zM21.999.003C9.852.003.003 8.62.003 19.25c0 6.075 3.224 11.483 8.249 15.011v9.734l9.635-5.846c1.334.219 2.706.347 4.112.347 12.149 0 21.996-8.617 21.996-19.246C43.995 8.62 34.148.003 21.999.003zm0 35.744c-1.606 0-3.156-.187-4.646-.505l-6.473 3.891.087-6.377c-4.962-2.984-8.214-7.917-8.214-13.506 0-9.111 8.617-16.497 19.246-16.497 10.63 0 19.247 7.386 19.247 16.497 0 9.11-8.617 16.497-19.247 16.497z"
+                    />
+                  </g>
+                </svg>
+              </div>
+              <span class="quantities__item-title">2500</span>
+              <p class="quantities__item-text">Blog posts</p>
+            </div>
+            <!-------------------------------------------------- 4-div -->
+            <div class="quantities__item">
+              <div class="quantities__item-img-wrapper">
+                <svg
+                  class="quantities__item-img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="44"
+                  height="44"
+                  viewBox="0 0 44 44"
+                >
+                  <g filter="url(#05bn9joyja)">
+                    <path
+                      fill-rule="evenodd"
+                      d="M30.25 0c-.424 0-.847.026-1.268.064-.154.014-.306.036-.459.057a12.368 12.368 0 0 0-1.32.231 14.2 14.2 0 0 0-.63.162c-.198.055-.396.109-.59.172-.178.058-.349.127-.524.193-.459.172-.908.366-1.343.582-.086.042-.176.081-.26.127-.229.121-.449.255-.672.388-.121.074-.244.144-.365.222-.215.138-.422.285-.628.434-.062.045-.128.086-.191.132A13.71 13.71 0 0 0 13.75 0C6.168 0 0 6.166 0 13.75c0 12.445 8.002 23.702 21.406 30.113a1.366 1.366 0 0 0 1.188 0C35.997 37.452 44 26.195 44 13.75 44 6.166 37.831 0 30.25 0zM22 41.097C9.934 35.108 2.75 24.927 2.75 13.75c0-6.066 4.935-11 11-11 2.219 0 4.368.684 6.19 1.933-2.135 2.424-3.44 5.592-3.44 9.067a1.374 1.374 0 1 0 2.75 0c0-3.274 1.446-6.211 3.723-8.227.211-.188.432-.366.654-.536.051-.036.101-.075.152-.113a10.855 10.855 0 0 1 1.542-.943 11.706 11.706 0 0 1 .911-.41c.1-.04.202-.076.305-.113.214-.077.428-.149.646-.212.133-.038.262-.071.395-.103.197-.049.392-.1.593-.14.182-.033.366-.057.548-.084.156-.023.312-.049.47-.066a11.63 11.63 0 0 1 1.061-.053c6.065 0 11 4.934 11 11 0 11.177-7.184 21.358-19.25 27.347zM30.25 5.5a1.375 1.375 0 1 0 0 2.75c3.033 0 5.5 2.466 5.5 5.5a1.375 1.375 0 1 0 2.75 0c0-4.55-3.701-8.25-8.25-8.25z"
+                    />
+                  </g>
+                </svg>
+              </div>
+              <span class="quantities__item-title">873</span>
+              <p class="quantities__item-text">Likes</p>
+            </div>
+            <!-------------------------------------------------- 5-div -->
+            <div class="quantities__item">
+              <div class="quantities__item-img-wrapper">
+                <svg
+                  class="quantities__item-img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="60"
+                  height="44"
+                  viewBox="0 0 60 44"
+                >
+                  <g filter="url(#f6hrluetxa)">
+                    <path
+                      fill-rule="evenodd"
+                      d="M52.31 40.611H1.691a1.69 1.69 0 0 0-1.688 1.693 1.69 1.69 0 0 0 1.688 1.691H52.31a1.69 1.69 0 0 0 1.688-1.691 1.69 1.69 0 0 0-1.688-1.693zM28.688 6.771V3.387h3.375a1.69 1.69 0 0 0 1.687-1.692A1.69 1.69 0 0 0 32.063.003H21.939a1.69 1.69 0 0 0-1.688 1.692 1.69 1.69 0 0 0 1.688 1.692h3.375s-.013 3.523 0 3.384C11.194 7.649.003 19.463.003 33.843v1.692a1.69 1.69 0 0 0 1.688 1.692H52.31a1.69 1.69 0 0 0 1.688-1.692v-1.692c0-14.38-11.19-26.194-25.31-27.072zM3.378 33.843c0-13.082 10.576-23.688 23.623-23.688s23.622 10.606 23.622 23.688H3.378z"
+                    />
+                  </g>
+                </svg>
+              </div>
+              <span class="quantities__item-title">900</span>
+              <p class="quantities__item-text">We launched</p>
+            </div>
+          </div>
+        </div>
+      </section>
       <!---------------------------------------------------- recent-posts -->
       <section class="recent-posts"></section>
       <!---------------------------------------------------- logotypes -->
